Images no longer extend out of viewport and are moved side by side if enough empty space is available.

--- a/pymorandum/resources/assets/style.css
+++ b/pymorandum/resources/assets/style.css
@@ -63,11 +63,13 @@ body {
 #collection {
   grid-area: "collection";
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 img, video {
-  width: 100%;
+  max-width: 100%;
+  max-height: 101vh;
   vertical-align:top;
 }
 
